--- a/style/entrega1.css
+++ b/style/entrega1.css
@@ -392,6 +392,10 @@ img:hover {
     width:50%;
     padding-left:300px;
 }
+.modal{
+    padding-top: 2%;
+    padding-left:10%;
+}
 @media screen and (max-width: 768px) {
     .encabezado_derecha{
         width:60%;
