--- a/style/entrega1.css
+++ b/style/entrega1.css
@@ -1,5 +1,5 @@
 body{
-    background-color: limegreen;
+    background-color: rgb(50, 179, 205);
    
 }
 .columna_derecha{
@@ -8,14 +8,14 @@ body{
     font-size: 40px;
     top:0px;
     right:0px;
-    background-color:limegreen;
+    background-color:rgb(50, 179, 205);
     
 }
 .encabezado_derecha{
     width:75%;
     height:80px;
     position:fixed;
-    background-color:green;
+    background-color:rgb(0, 75, 128);
     top:0px;
     
 }
@@ -35,7 +35,7 @@ body{
     font-size: 23px;
     font-style: italic;
     color: #ffffff;
-    background-color: #a1fb8a;
+    background-color: rgb(50, 179, 205);
     border-radius: 15px;
     border: 3px double #006505;
     
@@ -51,7 +51,7 @@ body{
     font-size: 23px;
     font-style: italic;
     color: #ffffff;
-    background-color: #a1fb8a;
+    background-color: rgb(50, 179, 205);
     border-radius: 15px;
     border: 3px double #006505;
 }
@@ -72,7 +72,7 @@ body{
 .cuerpo_derecha{
     margin-top:8%;
     margin-bottom:20%;
-    background-color:limegreen;
+    background-color:rgb(50, 179, 205);
     left:2%;
 }
 .columna_izquierda{
@@ -82,13 +82,13 @@ body{
     width:26%;
     font-size:40px;
     height:90%;
-    background-color:limegreen;
+    background-color:rgb(50, 179, 205);
     position:fixed;
 }
 .encabezado_izquierda{
     height:80px;
     font-size: large;
-    background-color: green;
+    background-color: rgb(0, 75, 128);
     margin-left:3%;
 }
 .titulo{
@@ -108,7 +108,7 @@ body{
 .cuerpo_izquierda{
     margin-top:5%;
     margin-left:3%;
-    background-color: limegreen;
+    background-color: rgb(50, 179, 205);
     height:90%;
 }
 
@@ -121,7 +121,7 @@ body{
     font-family:'monaco';
     font-size:60px;
     margin-left:5%;
-    background-color:#006505;
+    background-color:rgb(0, 75, 128);
     border-radius: 15px;
     text-align:center;
     border: 3px double black;
@@ -357,7 +357,7 @@ body{
 }
 .links{
     height:45%;
-    background-color:limegreen;
+    background-color:rgb(50, 179, 205);
     margin-top:60%;
 }
 .link{
@@ -369,7 +369,7 @@ body{
 .pie{
     bottom:0px;
     left:0px;
-    background-color:green;
+    background-color:rgb(0, 75, 128);
     position:fixed;
     width:100%;
     height:10%;  
