--- a/style/entrega1.css
+++ b/style/entrega1.css
@@ -435,7 +435,13 @@ img:hover {
     float:right;
     width:25%;
 }
-  
+.imagen_musica{
+    width:100%;
+    height:150px;
+}
+.audio_musica{
+    width:100%;
+}
 @media screen and (max-width: 768px) {
     .encabezado_derecha{
         width:60%;
