--- a/style/entrega1.css
+++ b/style/entrega1.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(50, 179, 205);
+    background-color: rgb(199, 213, 206);
    
 }
 .columna_derecha{
@@ -8,14 +8,14 @@ body{
     font-size: 40px;
     top:0px;
     right:0px;
-    background-color:rgb(50, 179, 205);
+    background-color: rgb(199, 213, 206);
     
 }
 .encabezado_derecha{
     width:75%;
     height:80px;
     position:fixed;
-    background-color:rgb(0, 75, 128);
+    background-color: #75a184;
     top:0px;
     
 }
@@ -34,8 +34,8 @@ body{
     font-weight: 200;
     font-size: 23px;
     font-style: italic;
-    color: #ffffff;
-    background-color: rgb(50, 179, 205);
+    color: #0e0a0a;
+    background-color: rgb(199, 213, 206);
     border-radius: 15px;
     border: 3px double #006505;
     
@@ -50,8 +50,8 @@ body{
     font-weight: 200;
     font-size: 23px;
     font-style: italic;
-    color: #ffffff;
-    background-color: rgb(50, 179, 205);
+    color: #0e0a0a;
+    background-color: rgb(199, 213, 206);
     border-radius: 15px;
     border: 3px double #006505;
 }
@@ -64,7 +64,7 @@ body{
     right:0px;
 }
 .inicio{
-    background-color:aqua;
+    background-color: #c7d5ce;
 }
 .registro{
     background-color: aquamarine;
@@ -72,7 +72,7 @@ body{
 .cuerpo_derecha{
     margin-top:8%;
     margin-bottom:20%;
-    background-color:rgb(50, 179, 205);
+    background-color: rgb(199, 213, 206);
     left:2%;
 }
 .columna_izquierda{
@@ -82,13 +82,13 @@ body{
     width:26%;
     font-size:40px;
     height:90%;
-    background-color:rgb(50, 179, 205);
+    background-color: rgb(199, 213, 206);
     position:fixed;
 }
 .encabezado_izquierda{
     height:80px;
     font-size: large;
-    background-color: rgb(0, 75, 128);
+    background-color: #75a184;
     margin-left:3%;
 }
 .titulo{
@@ -108,7 +108,7 @@ body{
 .cuerpo_izquierda{
     margin-top:5%;
     margin-left:3%;
-    background-color: rgb(50, 179, 205);
+    background-color: rgb(199, 213, 206);
     height:90%;
 }
 
@@ -121,7 +121,7 @@ body{
     font-family:'monaco';
     font-size:60px;
     margin-left:5%;
-    background-color:rgb(0, 75, 128);
+    background-color: #75a184;
     border-radius: 15px;
     text-align:center;
     border: 3px double black;
@@ -333,7 +333,6 @@ body{
 }
 .menu_option{
     column-count: 2;
-    column-width:10%;
     height:25%;
     border-style:solid;
     border-width:1px;
@@ -357,7 +356,7 @@ body{
 }
 .links{
     height:45%;
-    background-color:rgb(50, 179, 205);
+    background-color: rgb(199, 213, 206);
     margin-top:60%;
 }
 .link{
@@ -369,7 +368,7 @@ body{
 .pie{
     bottom:0px;
     left:0px;
-    background-color:rgb(0, 75, 128);
+    background-color: rgb(117, 161, 132);
     position:fixed;
     width:100%;
     height:10%;  
@@ -441,6 +440,26 @@ img:hover {
 }
 .audio_musica{
     width:100%;
+}
+.audio_musica_pie{
+    width:100%;
+    height:100%;
+    background-color:rgb(0, 75, 128);
+}
+.buscador{
+    width:20%;
+}
+.modal-content{
+    width:100%;
+
+}
+.btnsubmit2{
+    float:right;
+    margin-top:10%;
+    height:30%;
+}
+.buscador_entrada{
+    width:60%;
 }
 @media screen and (max-width: 768px) {
     .encabezado_derecha{
