--- a/style/entrega1.css
+++ b/style/entrega1.css
@@ -444,7 +444,8 @@ img:hover {
 .audio_musica_pie{
     width:100%;
     height:100%;
-    background-color:rgb(0, 75, 128);
+    padding-top:0.5%;
+    color: rgb(117, 161, 132);
 }
 .buscador{
     width:20%;
