--- a/style/entrega1.css
+++ b/style/entrega1.css
@@ -462,6 +462,8 @@ img:hover {
 .buscador_entrada{
     width:60%;
 }
+
+/*Ajustes para que en la versión de tablet se vea igual*/
 @media screen and (max-width: 768px) {
     .encabezado_derecha{
         width:60%;
@@ -500,13 +502,12 @@ img:hover {
     .icono{
         width:60%;
     }
-
+    /*Ajuste de los botones*/
     .boton_1{
         font-size: 20px;
         border-radius: 12px;
         
     }
-    
     .boton_2{
         font-size: 20px;
         border-radius: 12px;
@@ -515,13 +516,12 @@ img:hover {
         height: 80px;
         margin-top:100px;
     }
-    
+    /*Div con canciones, imagenes de artistas etc*/    
     .reggaeton{
         height:900px;
         grid-template-columns: 30% 30% 30%;
         
-    }
-    
+    }    
     .encabezado-perfil{
         margin-right: 50px;
     }
@@ -529,7 +529,10 @@ img:hover {
 
     
 }
+
+/*Ajustes para que en la versión de móvil se vea igual*/
 @media screen and (max-width: 600px) {
+    /*Ajuste de los botones*/
     .boton_1{
         font-size: 15px;
     }
@@ -537,11 +540,13 @@ img:hover {
     .boton_2{
         font-size: 15px;
     }
+    /*Div con canciones, imagenes de artistas etc*/
     .reggaeton{
         height:1200px;
         grid-template-columns: 45% 45% ;
         
     }
+    /*Ajuste de los encabezados*/
     .encabezado_derecha{
         width:55%;
         margin-left:45%;
@@ -549,6 +554,7 @@ img:hover {
     .encabezado_izquierda{
         width:45%;
     }
+    /*Formularios*/
     .container{
         height: 70%;
         width: 70%;
@@ -558,6 +564,7 @@ img:hover {
     
 }
 @media screen and (max-width: 450px) {
+    /*Ajuste de los botones*/
     .boton_1{
         font-size: 10px;
     }
@@ -565,10 +572,11 @@ img:hover {
     .boton_2{
         font-size: 10px;
     }
+    /*Div con canciones, imagenes de artistas etc*/
     .reggaeton{
         height:2500px;
         grid-template-columns: 90%;
-        
+    /*Ajuste de los encabezados*/
     }
     .encabezado_derecha{
         width:40%;
